align periscopes correctly in cards

--- a/src/app/builder/components/charts/Periscope.less
+++ b/src/app/builder/components/charts/Periscope.less
@@ -26,6 +26,12 @@
   }
 }
 
+.card {
+  .domain-input, .readonly-domain-input {
+    margin-left: -37px;
+  }
+}
+
 .domain-input {
   height: 25px;
   width: 38px;
